basic behavior in angular. take long time

--- a/front/src/app/stimulus/stimulus.component.html
+++ b/front/src/app/stimulus/stimulus.component.html
@@ -1,1 +1,4 @@
 <p>{{ stimulus | json }}</p>
+<img src="{{ cheminImage }}" alt="image"/>
+<button type="button" (click)="dejaVu()">Déjà Vu</button>
+<button type="button" (click)="jamaisVu()">Jamais Vu</button>
