feat(angular): mecanisme fonctionnel

--- a/front_angular/src/app/app.component.html
+++ b/front_angular/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-stimulus></app-stimulus>
+
+<!-- <app-despair></app-despair>
+<app-user-info></app-user-info> -->
+<div>
+  <router-outlet></router-outlet>
+</div>
