--- a/front_angular/src/app/experiments/experiment/experiment.component.html
+++ b/front_angular/src/app/experiments/experiment/experiment.component.html
@@ -1,13 +1,13 @@
-<app-despair></app-despair>
+<!-- <app-despair></app-despair>
 
-<p>Curr Img Test Comp: {{ currentImageId }}, {{currentImageUrl}}, {{nextImageId}}, {{nextImageUrl}} ||| {{ isExperimentLaunched }}</p>
+<p>Curr Img Test Comp: {{ currentImageId }}, {{currentImageUrl}}, {{nextImageId}}, {{nextImageUrl}} ||| {{ isExperimentLaunched }}</p> -->
 <div class="image-container">
   <img [src]="currentImageUrl" alt="Image" class="centered-image" [style.opacity]="imageOpacity" />
   <div class="button-container">
     <button (click)="jamaisVu()" [disabled]="buttonsDisabled" class="change-button">Jamais VU</button>
     <button (click)="dejaVu()" [disabled]="buttonsDisabled" class="change-button">Déjà VU</button>
     <button (click)="secondButtonClick()" [disabled]="buttonsDisabled" class="change-button">Second Button</button>
-    <button (click)="goToSecondPage()" class="change-button">Go to Second Page</button>
-    <button (click)="incrementTest()" class="change-button">Incr</button>
+    <!-- <button (click)="goToSecondPage()" class="change-button">Go to Second Page</button>
+    <button (click)="incrementTest()" class="change-button">Incr</button> -->
   </div>
 </div>
