feat(all): question interferente operationnelle mais décalée

--- a/front_angular/src/app/forms/tache-interferente/tache-interferente.component.html
+++ b/front_angular/src/app/forms/tache-interferente/tache-interferente.component.html
@@ -1,7 +1,7 @@
 
 <div class="form-container">
   <div class="centered-text">
-    <h1>Your Centered Text</h1>
+    <h1>Quel est le résultat de: {{ questionInterferente }}</h1>
   </div>
   <form [formGroup]="questionForm" (ngSubmit)="submitForm()">
     <div class="question-container">
