feat: IA operationnelle

--- a/front_angular/src/app/experiments/experiment/experiment.component.scss
+++ b/front_angular/src/app/experiments/experiment/experiment.component.scss
@@ -24,3 +24,13 @@
   width: 150px; /* Adjust this for the desired width of the buttons */
   padding: 10px; /* Adjust this for button padding */
 }
+
+.vu-par-ia {
+  background-color: rgba(lightgreen, 0.4);
+  color: darkgreen;
+}
+
+.non-vu-par-ia{
+  background-color: rgba(pink, 0.4);
+  color: darkred;
+}
