--- a/front_angular/src/app/forms/tache-interferente/tache-interferente.component.html
+++ b/front_angular/src/app/forms/tache-interferente/tache-interferente.component.html
@@ -1,4 +1,3 @@
-
 <div class="form-container">
   <div class="centered-text">
     <h1>Quel est le résultat de: {{ questionInterferente }}</h1>
@@ -21,11 +20,12 @@
       </div>
     </div>
     <div class="button-container">
-      <button type="submit" [disabled]="questionForm.invalid">Envoyer la réponse</button>
+      <button type="submit" [disabled]="questionForm.invalid">
+        Envoyer la réponse
+      </button>
     </div>
   </form>
 </div>
-
 
 <!-- <div>
   <p>This is the second page!</p>
