--- a/front_angular/src/app/header/despair/despair.component.html
+++ b/front_angular/src/app/header/despair/despair.component.html
@@ -1,4 +1,7 @@
 <div>
-  <h1>Current ID: {{ currentId$ | async }}. Next ID: {{ nextId$ | async }}. Is experiement Launched ? {{ isExperimentLaunched$ | async }}</h1>
+  <h1>
+    Current ID: {{ currentId$ | async }}. Next ID: {{ nextId$ | async }}. Is
+    experiement Launched ? {{ isExperimentLaunched$ | async }}
+  </h1>
   <button (click)="increment()">Increment</button>
 </div>
