--- a/front_angular/src/app/experiments/experiment/experiment.component.scss
+++ b/front_angular/src/app/experiments/experiment/experiment.component.scss
@@ -3,12 +3,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh; /* Adjust this if necessary */
+  height: 100vh; /* Adjust this if necessary */
 }
 
 .centered-image {
   display: block;
   margin: 0 auto;
+  // transition: opacity 1s ease; /* Adjust the transition duration to 1 second */
+}
+
+.echelle {
+  padding: 10px;
+  display: block;
+  margin: 10;
+  width: 70%;
   // transition: opacity 1s ease; /* Adjust the transition duration to 1 second */
 }
 
