--- a/front_angular/src/app/forms/user-info/user-info.component.html
+++ b/front_angular/src/app/forms/user-info/user-info.component.html
@@ -1,5 +1,30 @@
 <app-despair></app-despair>
 
-<p>Bienvenue dans cette experience</p>
+<p>Bienvenue dans cette experience. <br />
+
+<br />
+
+Cette expérience va se dérouler en 3 étapes. <br />
+
+<br />
+
+Dans chacune de ces étapes, plusieurs visages vous seront présentés. A chaque fois qu'un visage apparaît,
+vous devrez indiquer si vous avez déjà vu ce visage auparavant. Vous devrez aussi indiquer le niveau de
+confiance que vous avez en votre réponse. <br />
+
+<br />
+
+En première étape, vous effectuez cette tâche seul. En deuxième et troisième étape, vous serez aidé par un
+algorithme qui indiquera si un visage a déjà été présenté (visage entouré de vert) ou non (visage entouré
+de rouge). <br />
+
+<br />
+
+L'expérience dure environ 10 minutes. N'hésitez pas à poser des questions à l'expérimentateur avant de
+commencer. A chaque étape, les consignes seront précisées. Si vous êtes prêt et consentez à participer
+à cette expérience, cliquez sur le bouton "OK pour l'expérience".
+
+
+</p>
 
 <button (click)="sendToExperiment()">OK pour l'experience</button>
