--- a/front_angular/src/app/forms/info-second-task/info-second-task.component.html
+++ b/front_angular/src/app/forms/info-second-task/info-second-task.component.html
@@ -1,3 +1,31 @@
-<p>SECOND TASK</p>
+<h1>Première étape</h1>
 
-<button (click)="sendToExperiment()">OK pour l'experience</button>
+<p> ETAPE 1
+
+Vous effectuez maintenant la première étape.<br />
+
+<br />
+
+Un certain nombre de visages vous seront présentés un par un. A chaque visage, vous devez répondre à l'aide
+d'une échelle sur 6 points si vous avez déjà vu le visage auparavant ainsi que le niveau de confiance associé
+à cette réponse. Après chaque réponse, vous devrez résoudre une petit calcul mental.  <br />
+
+<br />
+
+Si vous êtes prêt à commencer, cliquez sur le
+bouton "OK j'ai compris". <br />
+
+<br />
+
+ETAPE 2 Pour les deux étapes suivantes, vous devrez effectuer exactement la même chose sauf que vous recevrez
+de l'aide d'un  algorithme qui vous indiquera si un visage a déjà été vu (ce visage sera entouré de vert), ou non (entouré
+de rouge). L'algorithme de l'étape 2 sera différent de celui de l'étape 3.
+
+
+</p>
+
+<h1>Deuxième et troisième étape</h1>
+
+
+
+<button (click)="sendToExperiment()">OK j'ai compris</button>
