feat: right redirection after differents steps

--- a/front_angular/src/app/experiments/experiment/experiment.component.html
+++ b/front_angular/src/app/experiments/experiment/experiment.component.html
@@ -1,6 +1,9 @@
 <!-- <app-despair></app-despair>
 
 <p>Curr Img Test Comp: {{ currentImageId }}, {{currentImageUrl}}, {{nextImageId}}, {{nextImageUrl}} ||| {{ isExperimentLaunched }}</p> -->
+
+<div>STATE : {{ stateMetaExperiment }}</div>
+
 <div class="image-container">
   <img
     [src]="currentImageUrl"
