--- a/front_angular/src/app/forms/info-first-task/info-first-task.component.html
+++ b/front_angular/src/app/forms/info-first-task/info-first-task.component.html
@@ -1,3 +1,18 @@
-<p>info-first-task works!</p>
+<h1>Première étape</h1>
 
-<button (click)="sendToExperiment()">OK pour l'experience</button>
+<h2>ETAPE 1</h2>
+
+Vous effectuez maintenant la première étape.<br />
+
+<br />
+
+Un certain nombre de visages vous seront présentés un par un. A chaque visage,
+vous devez répondre à l'aide d'une échelle sur 6 points si vous avez déjà vu le
+visage auparavant ainsi que le niveau de confiance associé à cette réponse.
+Après chaque réponse, vous devrez résoudre une petit calcul mental. <br />
+
+<br />
+
+Si vous êtes prêt à commencer, cliquez sur le bouton "OK j'ai compris". <br />
+
+<button (click)="sendToExperiment()">OK j'ai compris</button>
