--- a/front_angular/src/app/forms/info-third-task/info-third-task.component.html
+++ b/front_angular/src/app/forms/info-third-task/info-third-task.component.html
@@ -1,1 +1,8 @@
-<p>info-third-task works!</p>
+<h1>Deuxième et troisième étape</h1>
+
+ETAPE 2 Pour les deux étapes suivantes, vous devrez effectuer exactement la même
+chose sauf que vous recevrez de l'aide d'un algorithme qui vous indiquera si un
+visage a déjà été vu (ce visage sera entouré de vert), ou non (entouré de
+rouge). L'algorithme de l'étape 2 sera différent de celui de l'étape 3.
+
+<button (click)="sendToExperiment()">OK j'ai compris</button>
