--- a/front_angular/src/app/forms/info-third-task/info-third-task.component.html
+++ b/front_angular/src/app/forms/info-third-task/info-third-task.component.html
@@ -1,8 +1,20 @@
-<h1>Deuxième et troisième étape</h1>
+<h1>Troisième étape</h1>
 
-ETAPE 2 Pour les deux étapes suivantes, vous devrez effectuer exactement la même
+<P>
+
+Pour cette dernière étape, vous devrez effectuer exactement la même
 chose sauf que vous recevrez de l'aide d'un algorithme qui vous indiquera si un
 visage a déjà été vu (ce visage sera entouré de vert), ou non (entouré de
-rouge). L'algorithme de l'étape 2 sera différent de celui de l'étape 3.
+rouge). L'algorithme de cette étape est différent de celui de l'étape précédente.
+<br />
+<br />
+
+
+Si vous êtes prêt à commencer, cliquez sur le bouton "OK j'ai compris". <br />
+
+<br />
+
 
 <button (click)="sendToExperiment()">OK j'ai compris</button>
+
+</P>
