--- a/front_angular/src/app/forms/form-ending/form-ending.component.html
+++ b/front_angular/src/app/forms/form-ending/form-ending.component.html
@@ -1,3 +1,24 @@
-<p>
-  L'experience est presque terminée. Il vous reste à compléter ce formulaire
-</p>
+<h1>Questionnaire post-expérimental</h1>
+
+<form action="/soumettre_questionnaire" method="get">
+  <label>
+      <b>Avez-vous perçu une différence entre les 2 algorithmes ?</b><br>
+      <input type="radio" name="q1" value="oui"> Oui<br>
+      <input type="radio" name="q1" value="non"> Non<br>
+  </label><br><br>
+
+  <label>
+      <b>Quel algorithme vous inspirait le plus confiance ?</b><br>
+      <input type="radio" name="q2" value="premier"> Le premier<br>
+      <input type="radio" name="q2" value="deuxieme"> Le deuxième<br>
+      <input type="radio" name="q2" value="meme_manier"> Pas de différence<br>
+  </label><br><br>
+
+  <label>
+    <b>Pensez-vous que vos performances se sont améliorées grâce à l'un de ces algorithmes ?</b><br>
+    <input type="radio" name="q2" value="oui"> Oui<br>
+    <input type="radio" name="q2" value="non"> Non<br>
+</label><br><br>
+
+  <input type="submit" value="Terminer l'expérience">
+</form>
