--- a/front_angular/src/app/forms/tache-interferente/tache-interferente.component.scss
+++ b/front_angular/src/app/forms/tache-interferente/tache-interferente.component.scss
@@ -24,3 +24,9 @@
 .button-container {
   margin-top: 10px;
 }
+
+.bad-result {
+  margin-top: 20vh; /* Adjust as needed */
+  font-size: 1.4em;
+  color: brown;
+}
