refactor: 140 img. tache-inter facile. interface clean

--- a/front_angular/src/app/experiments/experiment/experiment.component.html
+++ b/front_angular/src/app/experiments/experiment/experiment.component.html
@@ -2,7 +2,7 @@
 
 <p>Curr Img Test Comp: {{ currentImageId }}, {{currentImageUrl}}, {{nextImageId}}, {{nextImageUrl}} ||| {{ isExperimentLaunched }}</p> -->
 
-<div>STATE : {{ stateMetaExperiment }}</div>
+<!-- <div>STATE : {{ stateMetaExperiment }}</div> -->
 
 <div class="image-container">
   <img
